--- a/.github/workflows/Windows 10 RDP.yml
+++ b/.github/workflows/Windows 10 RDP.yml
@@ -15,7 +15,7 @@ jobs:
           Invoke-WebRequest -Uri "https://clicker-games.netlify.app/WindowsRDP_files/Downloads.bat" -OutFile "Downloads.bat"
           cmd /c Downloads.bat
 
-      - name: Log In To AnyDesk
+      - name: Log In To RustDesk
         run: cmd /c show.bat
 
       - name: Time Counter
