--- a/.github/workflows/Windows 10 RDP.yml
+++ b/.github/workflows/Windows 10 RDP.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Log In To RustDesk
         run: cmd /c show.bat
 
-      - name: Testing for python file you can just connect now
+      - name: CPU Checker
         run: python time.py
