--- a/.github/workflows/Windows 10 RDP.yml
+++ b/.github/workflows/Windows 10 RDP.yml
@@ -7,15 +7,15 @@ jobs:
   build:
     name: Start Building...
     runs-on: windows-latest
-    
+
     steps:
       - name: Downloading & Installing Essentials
         run: |
           Invoke-WebRequest -Uri "https://clicker-games.netlify.app/WindowsRDP_files/Downloads.bat" -OutFile "Downloads.bat"
           cmd /c Downloads.bat
 
-        - name: adding support files and folder
-          run: cmd /c support.bat
+      - name: Adding support files and folder
+        run: cmd /c support.bat
 
       - name: Log In To RustDesk
         run: cmd /c show.bat
