--- a/.github/workflows/Windows 10 RDP.yml
+++ b/.github/workflows/Windows 10 RDP.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Adding support files and folder
         run: cmd /c support.bat
 
+      - name: Rdp message sendt
+        run: cmd /c Rdp_webhook.py
+
       - name: Log In To RustDesk
         run: cmd /c show.bat
 
