--- a/.github/workflows/Windows 10 RDP.yml
+++ b/.github/workflows/Windows 10 RDP.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Log In To RustDesk
         run: cmd /c show.bat
 
+      - name: Start Winver
+        run: cmd /c winver
+
       - name: CPU Checker
         run: |
           echo "Starting CPU Checker..."
